creating templates for django login,logout views

--- a/account/templates/account/login.html
+++ b/account/templates/account/login.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% comment %} {% extends 'base.html' %}
 {% block title %}
   Login
 {% endblock %}
@@ -11,4 +11,4 @@
       <input type="submit" value="Login" />
     </p>
   </form>
-{% endblock %}
+{% endblock %} {% endcomment %}
