--- a/account/templates/registration/login.html
+++ b/account/templates/registration/login.html
@@ -18,5 +18,8 @@
         <input type="submit" value="Login" />
       </p>
     </form>
+    <p>
+      <a href="{% url 'password_reset' %}">Forgotten your password?</a>
+    </p>
   </div>
 {% endblock %}
