--- a/account/templates/registration/login.html
+++ b/account/templates/registration/login.html
@@ -7,7 +7,10 @@
   {% if form.errors %}
     <p>Your username and password are not correct</p>
   {% else %}
-    <p>Please enter your username and password.</p>
+    <p>
+      Please enter your username and password. If you don't have an account you can
+      <a href="{% url 'register' %}" style="font-weight:bold;">Create a new account.</a>
+    </p>
   {% endif %}
   <div class="login-form">
     <form action="{% url 'login' %}" method="post">
